# tap-copernicus

./: .env.example  .gitignore  CLAUDE.md  PROMPT.md  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_copernicus/: __init__.py  __main__.py  client.py  helpers.py  netcdf_parser.py  streams.py  tap.py
tap_copernicus/streams/: __init__.py  era5_streams.py
tests/: __init__.py  test_core.py
